--- a/Practica-14/style.css
+++ b/Practica-14/style.css
@@ -1,3 +1,4 @@
+/* estilos del body */
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
@@ -9,6 +10,7 @@ body {
     background-color: #c2a0a0;
 }
 
+/* estilos del container */
 .container {
     text-align: center;
     background-color: #fff;
@@ -17,11 +19,13 @@ body {
     box-shadow: 0 0 0.7rem rgba(0,0,0,0.1);
 }
 
+/* estilos del input */
 input {
     padding: 0.5rem;
     margin: 0 0.5rem;
 }
 
+/* estilos del los botones */
 button {
     padding: 0.8rem;
     margin: .4rem;
@@ -31,7 +35,6 @@ button {
     border-radius: .2rem;
     cursor: pointer;
 }
-
 button:hover {
     background-color: #6c29b9;
 }
